# ros2-opcua-bridge

./: .gitignore  INSTALLATION.md  README.md
backend/: CMakeLists.txt  README.md  package.xml
backend/config/: opcua.yaml  opcua_test.yaml
backend/include/backend/: config.hpp  naming.hpp  opcua_client.hpp  ros_bridge.hpp
backend/launch/: full_test_system.launch.py  system.launch.py  test_system.launch.py
backend/src/: config.cpp  main.cpp  main_with_ros.cpp  opcua_client.cpp  ros_bridge.cpp
backend/test/: test_server.cpp
demonstrator_tree/: CMakeLists.txt  package.xml
demonstrator_tree/config/: bt_tree.xml  parameters.yaml
demonstrator_tree/include/demonstrator_tree/: behavior_node.hpp  parameters_parser.hpp
demonstrator_tree/src/: behavior_node.cpp  main.cpp
demonstrator_tree/src/demonstrator_tree/: behavior_node.cpp
demonstrator_tree/test/: service_server.py
gui_app/: CMakeLists.txt  package.xml
gui_app/include/gui_app/: mainwindow.hpp
gui_app/src/: main.cpp  mainwindow.cpp
